# core

./: .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL  INSTALL.md  License.txt  README  README.md  axrcore.qbs  config.in.h  objects.txt  pre-commit  pre-configure.bat  pre-configure.sh  validate.rb
docs/: CMakeLists.txt  Doxyfile
docs/hss/: library-architecture.hss
prototype/: CMakeCache.txt  CMakeLists.txt  README  cmake_install.cmake
prototype/app/: AXRTestAppAppDelegate.h  AXRTestAppAppDelegate.mm  CMakeLists.txt  Info.plist  axr.icns  axr.rc  main.m  main_win32.cpp  main_x11.cpp  package.sh  sdlmain.cpp
prototype/app/cairosdl/: README  cairosdl.c  cairosdl.h
prototype/core/: AXR.cpp  AXR.h  AXRController.cpp  AXRController.h  AXRGlobal.h  CMakeLists.txt  cmake_install.cmake
prototype/core/axr/: AXRController.cpp  AXRController.h  AXRDebugging.cpp  AXRDebugging.h  AXRExceptions.cpp  AXRExceptions.h  AXRFile.cpp  AXRFile.h  AXRRender.cpp  AXRRender.h  AXRWrapper.cpp  AXRWrapper.h
prototype/core/core.xcodeproj/: miro.mode1v3  miro.pbxuser  project.pbxproj
prototype/core/hss/: HSSBorder.cpp  HSSBorder.h  HSSCombinator.cpp  HSSCombinator.h  HSSComment.cpp  HSSComment.h  HSSConstants.h  HSSContainer.cpp  HSSContainer.h  HSSDisplayObject.cpp  HSSDisplayObject.h  HSSExpression.cpp  HSSExpression.h  HSSInstruction.cpp  HSSInstruction.h  HSSKeywordConstant.cpp  HSSKeywordConstant.h  HSSLineBorder.cpp  HSSLineBorder.h  HSSMargin.cpp  HSSMargin.h  HSSMultipleValue.cpp  HSSMultipleValue.h  HSSNumberConstant.cpp  HSSNumberConstant.h  HSSObject.cpp  HSSObject.h  HSSObjectDefinition.cpp  HSSObjectDefinition.h  HSSObjectExceptions.cpp  HSSObjectExceptions.h  HSSObjectNameConstant.cpp  HSSObjectNameConstant.h  HSSObjects.h  HSSParser.cpp  HSSParser.h  HSSParserExceptions.cpp  HSSParserExceptions.h  HSSParserNode.cpp  HSSParserNode.h  (+28 more)
prototype/core/os/: GenericAXRWrapper.cpp  GenericAXRWrapper.h  OSX.cpp  OSX.h  platform.h
prototype/core/xml/: AXRXmlParser.cpp  AXRXmlParser.h  AXRXmlParser_old.cpp  ExpatXMLFileParser.cpp  ExpatXMLFileParser.h  ExpatXMLParser.cpp  ExpatXMLParser.h  XMLParser.cpp  XMLParser.h  XMLParserExceptions.cpp  XMLParserExceptions.h  xml.h
prototype/expat/: config.status  libtool
prototype/expat/.libs/: libexpat.1.5.2.dylib
prototype/expat/xmlwf/: xmlwf
prototype/layoutTests/: tests.xml
prototype/layoutTests/1.3 selectors/: 1.3.1.hss  1.3.1.txt  1.3.2.hss  1.3.2.txt  1.3.2.xml
prototype/linux/: .gitignore  Makefile  README.md  axr  build_rsrc.sh  main.cpp  package.sh
prototype/linux/axrlib/: Makefile
prototype/linux/libaxr/: Makefile
prototype/mac/: AXR Test App_Prefix.pch  AXRTestAppAppDelegate.h  AXRTestAppAppDelegate.mm  HSSUniversalSelector.cpp  HSSUniversalSelector.h  mac-Info.plist  macAppDelegate.h  macAppDelegate.mm  main.m  tempstuff.txt  test.hss  test2.xml  test3.hss  test5.hss  test6.hss  test9.hss
prototype/mac/AXR Test App.xcodeproj/: miro.mode1v3  miro.pbxuser  project.pbxproj
prototype/mac/English.lproj/: MainMenu.xib
prototype/mac/mac.xcodeproj/: miro.mode1v3  miro.pbxuser  project.pbxproj
prototype/mac/views/: blank.hss  blank.xml  layoutTestsDefinitions.hss
prototype/resources/views/: blank.hss  layoutTests.hss  layoutTestsDefinitions.hss
prototype/tests/: style.hss
prototype/tests/assorted/: README  buttons.hss  dark.hss  polygon.hss  smileys.hss  style.hss  style10.hss  style11.hss  style12.hss  style13.hss  style3.hss  style5.hss  style7.hss  style9.hss  test.hss  test.xml  test10.xml  test11.xml  test12.xml  test13.xml  test2.xml  test3.xml  test4.xml  test5.xml  test6.xml  test7.hss  test7.xml  test8.xml  test9.hss  test9.xml  triangle.hss
prototype/tests/hss/: README
prototype/tests/rendering/: README
prototype/tests/test_project/: Test Project.tmproj  color.hss  foundation.hss  home.hss  home.xml  navigation.xml  style.hss  typography.hss
prototype/tests/xml/: README
prototype/win/: AXR_private.rc  Makefile.win  main.cpp  makefile
src/: CMakeLists.txt
src/TEST/: AXRTestProducer.cpp  AXRTestProducer.h  AXRTestRunner.cpp  AXRTestRunner.h  AXRTestThread.cpp  AXRTestThread.h  CMakeLists.txt
src/app/: AXRTestAppAppDelegate.h  AXRTestAppAppDelegate.mm  CMakeLists.txt  Info.plist  main.m  main.mm  package.sh  sdlmain.cpp
src/app/cairosdl/: cairosdl.c
src/browser/: BrowserApplication.cpp  BrowserApplication.h  BrowserSettings.cpp  BrowserSettings.h  BrowserWindow.cpp  BrowserWindow.h  BrowserWindow.ui  CMakeLists.txt  Info.plist  LogWindow.h  LogWindow.ui  PreferencesDialog.cpp  PreferencesDialog.h  Resources.qrc  main.cpp
src/cocoa/: AXRView.h  AXRView.mm  CMakeLists.txt  CocoaAXRWrapper.h  CocoaAXRWrapper.mm  NSAXRDocument.h  NSAXRDocument.mm  NSAXRView.h  NSAXRView.mm  cocoa.qbs
src/core/: AXR.cpp  AXR.h  AXRGlobal.cpp  AXRGlobal.h  CMakeLists.txt  Doxyfile  Info.plist  axr.h  core.qbs
src/core/axr/: AXRController.cpp  AXRController.h  AXRDebugging.cpp  AXRDebugging.h  AXRDocument.cpp  AXRDocument.h  AXRDocumentDelegate.h  AXRExecutionFrame.cpp  AXRExecutionFrame.h  AXRExecutionPointer.cpp  AXRExecutionPointer.h  AXRFile.cpp  AXRFile.h  AXRInitializer.cpp  AXRInitializer.h  AXRRender.cpp  AXRRender.h  AXRString.h  AXRWrapper.cpp  AXRWrapper.h
src/core/debug/: AXRDebugging.cpp  AXRDebugging.h  AXRError.cpp  AXRError.h  (+6 more)
src/layout-tests/: CMakeLists.txt  Json.cpp  Json.h  TestCase.cpp  TestCase.h  TestSuite.cpp  TestSuite.h  json.cpp  json.h  layout-tests.qbs  main.cpp
src/plugin/: AXR.cpp  AXR.h  AXRAPI.cpp  AXRAPI.h  AXRPlugin.cpp  AXRPlugin.h  CMakeLists.txt  Factory.cpp  PluginConfig.cmake
src/prototype/: AXRWidget.cpp  AXRWidget.h  CMakeLists.txt  Info.plist  LogWindow.cpp  LogWindow.h  LogWindow.ui  PreferencesDialog.cpp  PreferencesDialog.ui  PrototypeApplication.cpp  PrototypeApplication.h  PrototypeSettings.cpp  PrototypeSettings.h  PrototypeWindow.cpp  PrototypeWindow.h  PrototypeWindow.ui  main.cpp
src/qt/: CMakeLists.txt  QAXRWidget.cpp  QAXRWidget.h  qt.qbs
src/tools/: CMakeLists.txt
(+1170 files in other folders)
